# fresh

./: CHANGELOG.md  Cargo.toml  flake.nix  package.json
.github/workflows/: freebsd-builds.yml  linux-packages.yml  musl-builds.yml  release-npm.yml  release.yml
crates/fresh-core/src/: api.rs  file_uri.rs  hooks.rs
crates/fresh-editor/: Cargo.toml
crates/fresh-editor/locales/: cs.json  de.json  es.json  fr.json  it.json  ja.json  ko.json  pt-BR.json  ru.json  th.json  uk.json  vi.json  zh-CN.json
crates/fresh-editor/npm-package/: local.test.js  package.json.template
crates/fresh-editor/plugins/: audit_mode.i18n.json  audit_mode.ts  conductor.ts  config-schema.json  env-manager.i18n.json  env-manager.ts  git_log.ts  live_grep.ts  markdown_compose.i18n.json  orchestrator.ts  pkg.ts  rust-lsp.ts  search_replace.i18n.json  search_replace.ts  theme_editor.i18n.json  theme_editor.ts  tsconfig.json
crates/fresh-editor/plugins/examples/: hello_world.ts
crates/fresh-editor/plugins/lib/: finder.ts  fresh.d.ts  widgets.ts
crates/fresh-editor/resources/: fresh.1
crates/fresh-editor/scripts/: build-appimage.sh  test-packages.sh
crates/fresh-editor/src/: config.rs  main.rs  state.rs  test_api.rs
crates/fresh-editor/src/app/: action_events.rs  active_focus.rs  async_dispatch.rs  async_messages.rs  buffer_close.rs  buffer_groups.rs  buffer_management.rs  click_handlers.rs  composite_buffer_actions.rs  conductor_persistence.rs  dabbrev_actions.rs  editor_accessors.rs  editor_init.rs  event_apply.rs  file_open_orchestrators.rs  file_operations.rs  input.rs  input_dispatch.rs  input_helpers.rs  lifecycle.rs  lsp_actions.rs  lsp_event_notify.rs  lsp_requests.rs  macro_actions.rs  menu_context.rs  mod.rs  mouse_input.rs  navigation.rs  overlay.rs  plugin_commands.rs  plugin_dispatch.rs  popup_actions.rs  prompt_actions.rs  (+22 more)
crates/fresh-editor/tests/: focused_bug_test.rs  property_tests.rs  regression_hidden_cursor_panic.rs  shadow_model_editor_state_tests.rs  ssh_attach_error.rs  undo_redo_marker_roundtrip_tests.rs
crates/fresh-languages/: Cargo.toml
crates/fresh-languages/queries/templ/: highlights.scm
crates/fresh-languages/src/: lib.rs
crates/fresh-plugin-api-macros/src/: lib.rs
crates/fresh-plugin-runtime/src/: thread.rs  ts_export.rs
debian/: fresh-editor.install  fresh-editor.lintian-overrides  fresh-editor.manpages  rules
docs/.vitepress/: config.ts  genFeed.ts
docs/blog/editing/: index.md
docs/blog/fresh-0.2/: index.md
docs/blog/fresh-0.2.18/: index.md
docs/blog/fresh-0.2.9/: index.md
docs/blog/fresh-0.3.0/: index.md
docs/blog/fresh-pipeline/: index.md
docs/blog/productivity/: index.md
docs/blog/themes/: index.md
docs/configuration/: index.md
docs/internal/: AUTHORITY_DESIGN.md  EKS_S3_AUTHORITY_DESIGN.md  EKS_WORKSPACE_PLUGIN_DESIGN.md  EKS_WORKSPACE_UX_DESIGN.md  README.md  conductor-sessions-design.md  dock-ux-test-plan.md  eks-workspace-research-prompt.md  global-search-ux.md  lsp-feature-parity-plan.md  orchestrator-dock-gaps.md  osc52-client-server-analysis.md  project-search-replace.md
docs/plugins/api/: buffer.md  events.md  index.md
(+98 files in other folders)
