[package]
name = "fresh-languages"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Language support and syntax highlighting for Fresh editor"

[dependencies]
tree-sitter.workspace = true
tree-sitter-highlight.workspace = true
tree-sitter-rust = { version = "0.24.0", optional = true }
tree-sitter-python = { version = "0.25.0", optional = true }
tree-sitter-javascript = { version = "0.25.0", optional = true }
tree-sitter-typescript = { version = "0.23.2", optional = true }
tree-sitter-html = { version = "0.23.2", optional = true }
tree-sitter-css = { version = "0.25.0", optional = true }
tree-sitter-c = { version = "0.24.1", optional = true }
tree-sitter-cpp = { version = "0.23.4", optional = true }
tree-sitter-go = { version = "0.25.0", optional = true }
tree-sitter-json = { version = "0.24.8", optional = true }
tree-sitter-java = { version = "0.23.5", optional = true }
tree-sitter-c-sharp = { version = "0.23.1", optional = true }
tree-sitter-php = { version = "0.24.2", optional = true }
tree-sitter-ruby = { version = "0.23.1", optional = true }
tree-sitter-bash = { version = "0.25.1", optional = true }
tree-sitter-lua = { version = "0.4.1", optional = true }
tree-sitter-pascal = { version = "0.10.2", optional = true }
tree-sitter-odin = { version = "1.3.0", optional = true }
tree-sitter-templ = { version = "2.2.0", optional = true }

[features]
# Note: enabling tree-sitter-templ also requires tree-sitter-go because the
# templ grammar is built on top of Go and we reuse Go's highlight queries
# for the embedded Go portions of a templ file.
tree-sitter-templ = ["dep:tree-sitter-templ", "tree-sitter-go"]

# The grammars Fresh bundles by default: only languages that *must* use
# tree-sitter because syntect ships no grammar for them — JavaScript,
# TypeScript, JSON-with-comments (tree-sitter-json), and Templ — plus Go,
# which the Templ grammar extends. Every other language is highlighted by
# syntect and indented by the regex indent-rules tier, so its multi-megabyte
# parse table is no longer linked. Dropping the other 14 grammars reclaims
# ~20 MB of the release binary (the bulk of it the C#, C++, Ruby, Odin, PHP
# and Bash parse tables).
bundled-languages = [
    "tree-sitter-javascript", "tree-sitter-typescript",
    "tree-sitter-json", "tree-sitter-go", "tree-sitter-templ",
]

# Opt-in: every supported grammar, including the ones not bundled by default.
# Restores tree-sitter highlighting / AST indentation / scope-aware reference
# highlighting for the full language set at the cost of binary size.
all-languages = [
    "bundled-languages",
    "tree-sitter-rust", "tree-sitter-python",
    "tree-sitter-html", "tree-sitter-css", "tree-sitter-c", "tree-sitter-cpp",
    "tree-sitter-java", "tree-sitter-c-sharp", "tree-sitter-php", "tree-sitter-ruby",
    "tree-sitter-bash", "tree-sitter-lua", "tree-sitter-pascal", "tree-sitter-odin",
]
